--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -79,8 +79,17 @@ jobs:
       #     ssh-keygen -R ${{ steps.aws_instance.outputs.publicIp }}
           # scp -i ~/.ssh/id_rsa /.ssh/virginia.pem ubuntu@${{ steps.aws_instance.outputs.publicDNS }}:/.ssh/
 
+      - name: Set up SSH key
+        uses: webfactory/ssh-agent@v0.5.2
+        with:
+          ssh-private-key: ${{ secrets.AWS_PRIVATE_KEY }}
+  
+      - name: Install Ansible dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y ansible
 
       - name: Run Ansible playbook
         working-directory: ./ansible
         run: |
-          ansible-playbook -i ${{ steps.aws_instance.outputs.publicIp }}, nginx-container.yml --user ubuntu --private-key ${{ secrets.AWS_PRIVATE_KEY }} 
+          ansible-playbook -i ${{ steps.aws_instance.outputs.publicIp }}, nginx-container.yml --user ubuntu --private-key /root/.ssh/id_rsa
