--- a/ansible/nginx-container.yml
+++ b/ansible/nginx-container.yml
@@ -3,7 +3,7 @@
   hosts: all
   remote_user: ubuntu
   vars:
-    ansible_ssh_private_key_file: "./../../../pem/virginia.pem"
+    ansible_ssh_private_key_file: "~/.ssh/virginia.pem"
     container_count: 4
     default_container_name: docker
     default_container_image: ubuntu
