--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -89,6 +89,11 @@ jobs:
       #     sudo apt-get update
       #     sudo apt-get install -y ansible
 
+      - name: add Private Key
+        run: |
+          "echo ${{ secrets.AWS_PRIVATE_KEY }} > ~/.ssh/id_rsa",
+          "chmod 600 ~/.ssh/id_rsa"
+
       - name: Run Ansible playbook
         working-directory: ./ansible
         run: |
