--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -91,6 +91,7 @@ jobs:
 
       - name: add Private Key
         run: |
+          "mkdir ~/.ssh"
           "echo ${{ secrets.AWS_PRIVATE_KEY }} > ~/.ssh/id_rsa",
           "chmod 600 ~/.ssh/id_rsa"
 
