--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -91,10 +91,10 @@ jobs:
 
       - name: add Private Key
         run: |
-          "mkdir .ssh"
-          "pwd"
-          "echo ${{ secrets.AWS_PRIVATE_KEY }} > .ssh/id_rsa"
-          "chmod 600 .ssh/id_rsa"
+          mkdir .ssh
+          pwd
+          echo ${{ secrets.AWS_PRIVATE_KEY }} > .ssh/id_rsa
+          chmod 600 .ssh/id_rsa
 
       - name: Run Ansible playbook
         working-directory: ./ansible
