--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -91,7 +91,8 @@ jobs:
 
       - name: add Private Key
         run: |
-          mkdir .ssh
+          pwd
+          ll
           echo ${{ secrets.AWS_PRIVATE_KEY }} > .ssh/id_rsa
           chmod 600 .ssh/id_rsa
 
