--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -40,15 +40,14 @@ jobs:
           -var="private_key_path=${{ secrets.AWS_PRIVATE_KEY }}"
           -var-file="./variables.tfvars"
 
-      # - name: Set up Python
-      #   uses: actions/setup-python@v2
-      #   with:
-      #     python-version: 3.x
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.x
 
-      # - name: Install Ansible
-      #   run: |
-      #     python -m pip install --upgrade pip
-      #     pip install ansible
+      - name: Install Ansible
+        run: |
+          pip install ansible
 
       - name: Get Terraform Outputs
         working-directory: ./terraform/ec2
@@ -89,13 +88,16 @@ jobs:
       #     sudo apt-get update
       #     sudo apt-get install -y ansible
 
+      - name: Create SSH directory
+        run: mkdir -p $HOME/.ssh
+
       - name: Write private key
-        run: echo "${{ secrets.AWS_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+        run: echo "${{ secrets.AWS_PRIVATE_KEY }}" > $HOME/.ssh/id_rsa
 
       - name: Set private key permissions
-        run: chmod 600 ~/.ssh/id_rsa
+        run: chmod 600 $HOME/.ssh/id_rsa
 
       - name: Run Ansible playbook
         working-directory: ./ansible
         run: |
-          ansible-playbook nginx-container.yml -i ${{ steps.aws_instance.outputs.publicIp }} -u ubuntu --private-key ~/.ssh/id_rsa -e "ansible_ssh_common_args='-o StrictHostKeyChecking=no'"
+          ansible-playbook nginx-container.yml -i ${{ steps.aws_instance.outputs.publicIp }} -u ubuntu --private-key $HOME/.ssh/id_rsa -e "ansible_ssh_common_args='-o StrictHostKeyChecking=no'"
